# devbox

./: Cargo.toml  README.md
docs/logs/: 2026-03-01-144645-lets-implement-the-docsplans.txt  2026-03-01-144706-i-want-to-create-a-cli-tool-that-allow-the-user-to.txt  2026-03-01-151658-when-i-run-devbox-up-on-a-project-folder-the-cont.txt  2026-03-01-212457-i-think-the-logic-for-the-up-command-in-case-the.txt  2026-03-01-llama-log.txt  2026-03-03-183414-remove-lima-support-we-only-use-docker-now.txt  2026-03-03-185009-add-the-ability-to-start-the-devbox-and-expos.txt
docs/plans/: 2026-03-01-devbox-design.md  2026-03-01-devbox-plan.md  2026-03-03-port-configuration-design.md  2026-03-03-port-configuration-implementation.md
src/: backend.rs  commands.rs  config.rs  main.rs
